# Veil-Protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
circuits/: Cargo.toml
circuits/benches/: constraint_count.rs
circuits/src/: ecdh_gadget.rs  lib.rs  merkle_gadget.rs  poseidon_gadget.rs  relay_step.rs
circuits/tests/: security.rs
core/: Cargo.toml
core/src/: config.rs  cover_traffic.rs  credit.rs  lib.rs  nullifier.rs  penalty_log.rs  poseidon.rs  reputation.rs  shamir.rs  sphinx.rs  types.rs
doc/: whitepaper.tex
simulation/: adversary_bound_montecarlo.py  adversary_bound_results.json  crdt_convergence.py  crdt_convergence_results.json
