[package]
name = "veil-circuits"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-knowledge proof circuits for the Veil Proof-of-Relay system"

[dependencies]
veil-core = { path = "../core" }
ark-ff.workspace = true
ark-ec.workspace = true
ark-bn254.workspace = true
ark-ed-on-bn254.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-crypto-primitives.workspace = true
ark-snark.workspace = true
ark-groth16.workspace = true
rand.workspace = true
sha2.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

[[bench]]
name = "constraint_count"
harness = false
